Fixed volume mixer label overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,8 +69,8 @@
 .QSTWEAKS-panel-menu .quick-toggle-menu {
     margin: 0;
 }
-/* clear-notifications-button */
 .QSTWEAKS-notifications-clear-button {
+    /* clear-notifications-button */
     font-weight: bold;
     padding: 6px 12px;
     border-radius: 8px;
@@ -79,6 +79,7 @@
 .QSTWEAKS-notifications-clear-button:hover {
     background-color: rgba(127, 127, 127, .2);
 }
+
 /* media control on quick settings */
 .quick-settings .QSTWEAKS-media .message {
     /* margin / round */
@@ -139,4 +140,12 @@
     font-weight: normal !important;
     padding-top: 0.2em !important;
     padding-bottom: 0.4em !important;
+}
+
+/* volume mixer label */
+.QSTWEAKS-volume-mixer-label {
+    padding-left: 6px;
+    font-size: 0.92em;
+    text-overflow: ellipsis;
+    width: 0px;
 }
